<resources>
    <string name="app_name" translatable="false">Math.It</string>
    <string name="welcome_message">Welcome my friend</string>
    <string name="SinglePlayer">Singleplayer</string>
    <string name="MultiPlayer">Multiplayer</string>
    <string name="Users">Users</string>
    <string name="points">Points: </string>
    <string name="level">Level:</string>
    <string name="users_label">Top 5</string>
    <string name="default_player_name">Player123</string>
    <string name="profile_title_label">Your Profile</string>
    <string name="profile_picture_label">Profile Picture</string>
    <string name="edit_profile_name_label">Name</string>
    <string name="save_profile_label">Save</string>
    <string name="profile_button_label">Profile</string>
    <string name="multiplayer_title">Multiplayer</string>
    <string name="multiplayer_title_textview">Multiplayer</string>
    <string name="host_game_title">Create game</string>
    <string name="join_game_title">Available Games</string>
    <string name="nextLevel">Loading next level in…</string>
    <string name="time_left">Time left:</string>
    <string name="start_next_level">Next Level</string>
    <string name="list_empty_prompt">There are no games available</string>
    <string name="waiting_for_game_to_start">Waiting for game to proceed</string>
    <string name="current_level">Current Level</string>
    <string name="no_players_connected">There are no players connected</string>
    <string name="game_over">GAME OVER</string>
    <string name="main_menu">Main Menu</string>
    <string name="save_to_top_5">Save To TOP 5</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="creditsTitle">Credits</string>
    <string name="this_project_was_made_by">This project was made by:</string>
    <string name="aplicacoes_moveis_22_23" translatable="false">Aplicações Móveis 22/23</string>
    <string name="developers" translatable="false">Rafael Gil\na2020136741@isec.pt\n \nGonçalo Salgueirinho\na2020142627@isec.pt\n \nPedro Nogueira\na2020136533@isec.pt</string>
    <string name="wait_for_players">Wait for more player</string>
>>>>>>> main
</resources>