<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.CreditsActivity"
    android:background="@drawable/gradient_theme">


    <TextView
        android:id="@+id/ActivityTitle"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:text="@string/creditsTitle"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/ActivityDescription"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/this_project_was_made_by"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityTitle"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/developers"
        android:textColor="@color/purple_200"
        android:layout_width="291dp"
        android:layout_height="216dp"
        android:text="@string/developers"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityDescription"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="177dp"
        android:layout_height="103dp"
        android:textSize="18sp"
        android:textColor="@color/purple_200"
        android:text="@string/aplicacoes_moveis_22_23"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developers" />

</androidx.constraintlayout.widget.ConstraintLayout>