<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_theme"
    tools:context=".controllers.MultiPlayerWaitStartActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/multiplayer_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/multiplayer_title_textview"
            android:textColor="@color/purple_200"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/ButtonSinglePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btnCreateGame"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:padding="15dp"
            android:text="@string/host_game_title"
            android:textColor="#D2D2D2"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/ButtonMultiPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            android:layout_marginTop="20dp"
            app:layout_constraintVertical_chainStyle="packed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/cardview_dark_background"
            android:padding="15dp"
            android:text="@string/join_game_title"
            android:textAlignment="center"
            android:textColor="#D2D2D2"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/availableGamesListView"
            android:layout_width="wrap_content"
            android:layout_height="520dp"
            android:textAlignment="center"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>